Fixing pages aligned to the left side of browser

--- a/app/Resources/assets/sass/styles.scss
+++ b/app/Resources/assets/sass/styles.scss
@@ -5,9 +5,8 @@ html,body {
 }
 
 .container--main {
-    box-sizing: border-box;
     min-height: 100%;
-    padding: 0 0 36px;
+    padding-bottom: 36px;
     position: relative;;
 }
 
